--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
-<div class="tv">
-    <div id="terminal"></div>
-    <div class="collection terminal">
-        See Also: <a href="https://codepen.io/collection/AeGGxz" target="top">Vintage Screen Effects Collection</a> for inspiration
-    </div>
-    <div class="flicker"></div>
-    <div class="scanlines"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  
+<head>
+    <meta http-equiv="content-type" 
+        content="text/html; charset=UTF-8">
+  
+    <meta name="viewport" content="width=device-width,
+        minimum-scale=1,initial-scale=1">
+  
+    <script src=
+        "https://code.jquery.com/jquery-3.3.1.min.js">
+    </script>
+  
+    <script src=
+"https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js">
+    </script>
+  
+    <link rel="stylesheet" href=
+"https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css" />
+  
+    <style type="text/css">
+        .terminal,
+        span,
+        .cmd,
+        div {
+            --color: rgba(0, 128, 0, 0.99);
+        }
+  
+        .terminal,
+        span {
+            --size: 1.4;
+        }
+    </style>
+</head>
+  
+<body>
+    <script>
+        $('body').terminal({
+            iam: function (name) {
+                this.echo('Hello, ' + name +
+                    '. Welcome to GeeksForGeeks');
+            },
+            founder: function () {
+                this.echo('Sandeep Jain');
+            },
+            help: function () {
+                this.echo('iam - iam command and '
+                + 'pass your name as argument\n'
+                + 'founder to know the founder');
+            },
+        }, {
+            greetings: 'GeeksForGeeks - A place to'
+                + ' learn DS, Algo and Computer '
+                + 'Science for free'
+        });
+    </script>
+</body>
+  
+</html>
